cli/tests/snapshots/help__btrfs_subvolume.snap
---
source: cli/tests/help.rs
expression: text
---
Create, delete, list, and manage btrfs subvolumes and snapshots.

Subvolumes are independent filesystem trees within a btrfs filesystem, allowing
flexible storage organization, snapshots, and quota management. Snapshots are
read-only or read-write copies of subvolumes at a point in time. Most operations
require CAP_SYS_ADMIN.

Usage: subvolume <COMMAND>

Commands:
  create       Create a new subvolume at each given path
  delete       Delete one or more subvolumes or snapshots
  snapshot     Create a snapshot of a subvolume
  show         Show detailed information about a subvolume
  list         List subvolumes and snapshots in the filesystem
  get-default  Show the default subvolume of a filesystem
  set-default  Set the default subvolume of a filesystem
  get-flags    Show the flags of a subvolume
  set-flags    Set the flags of a subvolume
  find-new     List the recently modified files in a subvolume
  sync         Wait until given subvolume(s) are completely removed from the
               filesystem
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
