cli/tests/snapshots/help__btrfs_subvolume_delete.snap
---
source: cli/tests/help.rs
expression: text
---
Delete one or more subvolumes or snapshots.

Delete subvolumes from the filesystem, specified by path or id. The
corresponding directory is removed instantly but the data blocks are removed
later.

The deletion does not involve full commit by default due to performance reasons
(as a consequence, the subvolume may appear again after a crash). Use one of the
--commit options to wait until the operation is safely stored on the media.

Usage: delete [OPTIONS] <PATHS>...

Arguments:
  <PATHS>...
          Subvolume paths to delete, or (with --subvolid) the filesystem path

Options:
  -c, --commit-after
          Wait for transaction commit at the end of the operation

  -C, --commit-each
          Wait for transaction commit after deleting each subvolume

  -i, --subvolid <SUBVOLID>
          Delete by subvolume ID instead of path. When used, exactly one
          positional argument is expected: the filesystem path (mount point)

  -R, --recursive
          Delete accessible subvolumes beneath each subvolume recursively. This
          is not atomic and may need root to delete subvolumes not accessible by
          the user

  -v, --verbose...
          Be verbose, print subvolume names as they are deleted

  -h, --help
          Print help (see a summary with '-h')
