cli/tests/snapshots/help__btrfs_subvolume_get_default.snap
---
source: cli/tests/help.rs
expression: text
---
Show the default subvolume of a filesystem

Usage: get-default <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem

Options:
  -h, --help
          Print help
