cli/tests/snapshots/help__btrfs_subvolume_get_flags.snap
---
source: cli/tests/help.rs
expression: text
---
Show the flags of a subvolume

Usage: get-flags <PATH>

Arguments:
  <PATH>
          Path to a subvolume

Options:
  -h, --help
          Print help
