cli/tests/snapshots/help__btrfs_subvolume_show.snap
---
source: cli/tests/help.rs
expression: text
---
Show detailed information about a subvolume

Displays UUIDs, generation numbers, creation time, flags, and send/receive
transaction IDs for the subvolume that contains the given path.

The subvolume can be specified by path (default), or by root id or UUID that are
looked up relative to the given path.

Usage: show [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a subvolume or any file within it

Options:
  -r, --rootid <ROOTID>
          Look up subvolume by its root ID instead of path

  -u, --uuid <UUID>
          Look up subvolume by its UUID instead of path

      --raw
          Show raw numbers in bytes

      --human-readable
          Show human-friendly numbers using base 1024 (default)

      --iec
          Use 1024 as a base (KiB, MiB, GiB, TiB)

      --si
          Use 1000 as a base (kB, MB, GB, TB)

      --kbytes
          Show sizes in KiB, or kB with --si

      --mbytes
          Show sizes in MiB, or MB with --si

      --gbytes
          Show sizes in GiB, or GB with --si

      --tbytes
          Show sizes in TiB, or TB with --si

  -h, --help
          Print help (see a summary with '-h')
